# sift-cli

./: Cargo.toml  README.md  README_cn.md  RELEASING.md  install.sh
.github/workflows/: release.yml
data/: announcement_categories.json  financials_default_items.json  items.txt
docs/: TESTING.md
scripts/: install.sh
src/: app.rs  cli.rs  db.rs  error.rs  http.rs  main.rs
src/cache/: announcements.rs  file.rs  financials.rs  mod.rs  record.rs  search.rs  ttl.rs
src/cache/financials/: mod.rs  stored.rs
src/commands/: announce.rs  bars.rs  extract.rs  fact.rs  financials.rs  map.rs  market.rs  metric.rs  mod.rs  quote.rs  report.rs  search.rs  sql.rs
src/commands/announce/: input.rs  mod.rs  render.rs
src/domain/: announcement.rs  bars.rs  financial_query.rs  financial_row.rs  items_dict.rs  market.rs  mod.rs  period.rs  quote.rs  single_quarter.rs  symbol.rs
src/fetch/: announce.rs  bars.rs  extract.rs  market.rs  mod.rs  quote.rs  report.rs  search.rs
src/output/: announce.rs  bars.rs  financial_render.rs  mod.rs  query.rs  render.rs  tabular.rs
src/pdf/: extract.rs  mod.rs  pages.rs  scan_detect.rs
src/service/: facts.rs  metrics.rs  mod.rs  tsv.rs
src/sources/: bars_source.rs  cninfo.rs  eastmoney_financials.rs  eastmoney_screen.rs  financial_source.rs  mod.rs  quote_source.rs  sina_financials.rs
src/sources/cninfo/: announcements.rs  download.rs  listings.rs  mod.rs
src/sources/eastmoney/: bars.rs  mod.rs  quote.rs
src/sources/eastmoney_financials/: a_three.rs  hk_three.rs  indicator.rs  translate.rs  us_three.rs
src/sources/paddleocr/: mod.rs  oauth.rs  token.rs
src/sources/tencent/: bars.rs  mod.rs
src/store/: mod.rs
tests/: announce_download_e2e.rs  announce_list_e2e.rs  bars_e2e.rs  data_schema.rs  extract_auto_e2e.rs  extract_fast_e2e.rs  extract_fine_e2e.rs  quote_e2e.rs  search_e2e.rs
