[package]
name = "sift"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "sift"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unicode-width = "0.2"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
dirs = "5"
time = { version = "0.3", features = ["formatting", "parsing"] }
duckdb = { version = "1", features = ["bundled"] }
blake3 = "1"
tabled = "0.20"

[dev-dependencies]
mockito = "1"
tempfile = "3"
filetime = "0.2"
assert_cmd = "2"
