[package]
name = "sift"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"

[[bin]]
name = "sift"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unicode-width = "0.2"
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
dirs = "6"
time = { version = "0.3", features = ["formatting", "parsing"] }
# 1.10504 is the first libduckdb-sys that links the Windows system
# libs DuckDB needs (ws2_32 / rstrtmgr / bcrypt); older versions fail
# to link on *-pc-windows-* with undefined RmStartSession/… symbols.
duckdb = { version = "1.10504", features = ["bundled"] }
blake3 = "1"
tabled = "0.20"
pdf_oxide = { version = "0.3", default-features = false }
base64 = "0.22"

[dev-dependencies]
mockito = "1"
tempfile = "3"
filetime = "0.2"
assert_cmd = "2"
# `image` is pulled in transitively by pdf_oxide; we declare a direct
# dev-dep so the auto-mode fixture builder can encode a tiny PNG
# without hand-crafting CRCs.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
